Fix: Correct WebAuthn (Passkey) icon size distortion on login (v2.4.1)

--- a/media/css/template.css
+++ b/media/css/template.css
@@ -107,3 +107,15 @@ img {
     max-width: 500px;
     margin: 0 auto;
 }
+
+/* Fix WebAuthn Icon Size on Login */
+.plg_system_webauthn_login_button svg {
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-right: 0.5rem;
+    vertical-align: middle;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+}
